structmeta-tests/tests/compile_fail/struct_meta/expected_name_args_buf_flag.stderr
error: expected `value(...)`, found `value`
 --> $DIR/expected_name_args_buf_flag.rs:1:45
  |
1 | #[structmeta_tests::attr_required_name_args(value)]
  |                                             ^^^^^
